fix table padding on mobile

--- a/css/recep.css
+++ b/css/recep.css
@@ -1,7 +1,7 @@
 table {
     border-collapse: collapse;
     margin-bottom: 20px;
-    margin-left: 50px;
+    margin-left: 5%;
     margin-top: 15px;
 }
 
